# GCTA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: hpc-toolchain.cmake
include/: cpu.h
main/: CMakeLists.txt  bivar_reml.cpp  data.cpp  est_hsq.cpp  gcta.h  mlm_assoc.cpp  option.cpp
resources/: gcta64.desktop
scripts/hpc/: build.sh
scripts/mac/: build.sh
src/: FastFAM.cpp  Geno.cpp  Pheno.cpp  acat.c  config.h  main.cpp
submods/Pgenlib/: PgenReader.cpp
